# medor

./: Cargo.toml  _medor  medor.bash  medor.fish
src/: cli.rs
